# DBForge

./: .gitignore  CODEX.md  COMPLETED.txt  DEVELOPMENT.md  LICENSE.md  PLAN.md  README.md  TODO.txt  nginx-stream.conf
backend/: API_KEY_SYSTEM.md  API_KEY_SYSTEM_SUMMARY.md  FILE_MANIFEST.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README_API_KEY_SYSTEM.md  START_HERE.md  application-prod.properties  deploy.sh  pom.xml  verify_implementation.sh
database/: dbforge-working.sql  schema.sql
docs/: DBForge.docx  DBForge.pptx  DEPLOYMENT.md
examples-py/: README.md
examples-py/mongo-fastapi-catalog/: .env.example  main.py  requirements.txt
examples-py/mysql-fastapi-notes/: .env.example  main.py  requirements.txt
examples-py/postgres-fastapi-tasks/: .env.example  main.py  requirements.txt
examples-py/redis-fastapi-queue/: .env.example  main.py  requirements.txt
examples/mongodb-express-vue/: README.md
examples/postgres-fastify-svelte/: README.md
examples/redis-koa-solid/: README.md
framework/: .npmignore  README.md  dbforge-framework.ts  package-lock.json  package.json
framework-py/: LICENSE  README.md  pyproject.toml
framework-py/dbforge_framework/: __init__.py  client.py  helpers.py
framework/src/: browser-client.js  client.d.ts  client.js  crypto.d.ts  crypto.js  sqlSafe.d.ts  sqlSafe.js  types.ts
framework/ui/: app.js  index.html  styles.css
frontend/: .env.production.template  README.md  deploy-landing.sh  deploy.sh  index.html  nginx-landing.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: robots.txt  (+1 more)
tests/: package-lock.json  test-api.js  test-framework.js  test-pg.js
(+146 files in other folders)
